[package]
name = "github-gas-gauge"
version = "0.1.0"
description = "GitHub Gas Gauge Desktop App"
authors = ["bmhornback"]
edition = "2021"

[lib]
name = "github_gas_gauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "notification"] }
tauri-plugin-notification = "2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
