[package]
name = "github-gas-gauge"
version = "0.1.0"
description = "A cross-platform desktop app for monitoring GitHub billing usage"
authors = ["bmhornback"]
edition = "2021"

[lib]
name = "github_gas_gauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
